syntax = "proto3";

package greet;

message CalRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message CalResponse {
  int32 result = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetRequest {
  string first_name = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
  // server streaming
  rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
  rpc Calculation (CalRequest) returns (CalResponse);
}